<resources>
    <string name="app_name">MessageSync</string>
    <string name="title_home">Home</string>
    <string name="title_notification_setting">Notification Settings</string>
    <string name="title_message">Message</string>
    <string name="title_about">About</string>
    <string name="show_all_messages">Reload Messages</string>
    <string name="home_telegram_description">Send message to Telegram</string>
    <string name="edittext_plus1">Okhttp_0529_00%d</string>
    <string name="message_result">ResponseBody: \n%s </string>
    <string name="send_message">Send</string>
    <string name="check_token">Check Token</string>
    <string name="text_message">Message:</string>
    <!-- Preference Titles -->
    <string name="telegram">Telegram</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Telegram Preferences -->
    <string name="telegram_token">Telegram Token</string>
    <string name="telegram_chat_id">Telegram Chat ID</string>
    <string name="reply_title">Default reply action</string>

    <!-- Preferences Key -->
    <string name="telegram_token_key">telegram_token</string>
    <string name="telegram_chat_id_key">telegram_chat_id</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>